# bookrab

./: .env  .gitignore  Cargo.toml  README.md  debug.sh  diesel.toml  error_docs.py  init.lldb
crates/core/: Cargo.toml  config.rs  errors.rs  lib.rs  schema.rs
crates/core/books/: history.rs  mod.rs  sink.rs  test_utils.rs  utils.rs
crates/core/database/: history.rs  mod.rs
crates/core/migrations/2024-12-12-180553_create_history_entry/: up.sql
crates/rest-api/: Cargo.toml  config.rs  database.rs  docker-compose.yml  errors.rs  main.rs
crates/rest-api/migrations/2024-12-12-180553_create_history_entry/: down.sql
crates/rest-api/views/books/: list.rs  search.rs  upload.rs
crates/tui/: Cargo.toml  LICENSE  README.md
crates/tui/src/: database.rs  logs.rs  main.rs
src/: config.rs  errors.rs  log4rs.yml  main.rs  schema.rs
src/books/: history.rs  mod.rs  test_utils.rs  utils.rs
src/database/: history.rs
src/views/: books.rs  upload.rs
src/views/books/: list.rs  mod.rs  search.rs  test_utils.rs  upload.rs
