[package]
name = "bookrab"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
confy = "0.6.1"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
