[package]
name = "bookrab"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.93"
confy = "0.6.1"
directories = "5.0.1"
futures-util = "0.3.31"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
grep-searcher = "0.1.14"
log = "0.4.22"
log4rs = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
utoipa = { version = "5.2.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
