[package]
name = "bookrab-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["chrono", "postgres", "r2d2"] }
directories = "5.0.1"
dotenv = "0.15.0"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
grep-searcher = "0.1.14"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"


[lib]
path = "lib.rs"
